fix: change z-index for .banner-blog

--- a/css/style.css
+++ b/css/style.css
@@ -643,6 +643,7 @@ h2 {
           align-items: center;
   gap: 24px;
   margin-top: 140px;
+  z-index: 30;
 }
 
 .banner-blog-header {
